--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,6 +6,7 @@
   "type": "module",
   "proxy": "http://127.0.0.1:5001",
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.15.3",
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
     "@testing-library/jest-dom": "^5.11.9",
@@ -19,13 +20,17 @@
     "framer-motion": "^4.1.4",
     "geoip-country": "^4.0.75",
     "globalthis": "^1.0.2",
+    "install": "^0.13.0",
     "ip": "^1.1.5",
+    "mdbreact": "^5.0.2",
+    "npm": "^7.19.1",
     "react": "^17.0.1",
     "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.1",
     "react-highlight-words": "^0.17.0",
     "react-image-file-resizer": "^0.4.3",
     "react-infinite-scroll-component": "^6.0.0",
+    "react-lines-ellipsis": "^0.15.0",
     "react-map-gl": "^6.1.12",
     "react-mapbox-gl": "^5.1.1",
     "react-modal": "^3.13.1",
