--- a/chatbackend/package.json
+++ b/chatbackend/package.json
@@ -3,12 +3,14 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+
   "scripts": {
     "start": "nodemon chatserver.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.21.1",
     "socket.io": "^2.3.0"
   },
   "devDependencies": {
