--- a/frontend/package.json
+++ b/frontend/package.json
@@ -40,7 +40,9 @@
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-sticky": "^6.0.3",
     "react-swipeable-views": "^0.13.9",
+    "react-to-pdf": "0.0.14",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "socket.io-client": "^2.3.0",
