--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
     "react": "^17.0.1",
     "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.1",
+    "react-google-charts": "^3.0.15",
     "react-highlight-words": "^0.17.0",
     "react-image-file-resizer": "^0.4.3",
     "react-infinite-scroll-component": "^6.0.0",
@@ -43,6 +44,7 @@
     "react-sticky": "^6.0.3",
     "react-swipeable-views": "^0.13.9",
     "react-to-pdf": "0.0.14",
+    "react-typical": "^0.1.3",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "socket.io-client": "^2.3.0",
